tests/ui/implied-bounds/hrlt-implied-trait-bounds-roundtrip.stderr
error: lifetime may not live long enough
  --> $DIR/hrlt-implied-trait-bounds-roundtrip.rs:23:49
   |
LL |     let bar: for<'a, 'b> fn(Foo<'a>, &'b ()) = |_, _| {};
   |                                                 ^
   |                                                 |
   |                                                 has type `Foo<'1>`
   |                                                 requires that `'1` must outlive `'static`

error: aborting due to 1 previous error

